--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@omisego/omg-js": "^2.0.0-v0.2",
+    "eth-lightwallet": "^3.0.1",
+    "hooked-web3-provider": "^1.0.0",
+    "human-standard-token-abi": "^2.0.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
+    "number-to-bn": "^1.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "web3": "^1.0.0-beta.55"
   },
   "scripts": {
     "start": "react-scripts start",
