--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@omisego/omg-js": "^2.0.0-v0.2",
+    "big-number": "^2.0.0",
     "eth-lightwallet": "^3.0.1",
     "hooked-web3-provider": "^1.0.0",
     "human-standard-token-abi": "^2.0.0",
