--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "web3": "^1.0.0-beta.55"
+    "web3": "1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
